# game.libretro.pcsx-rearmed

./: .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml
depends/common/pcsx-rearmed/: CMakeLists.txt  libretro-pcsx-rearmed-0001-Remove-configure-file.patch  pcsx-rearmed.txt
game.libretro.pcsx-rearmed/: addon.xml  addon.xml.in  buttonmap.xml
game.libretro.pcsx-rearmed/resources/: buttonmap.xml  settings.xml
game.libretro.pcsx-rearmed/resources/language/English/: strings.po
gameclient.pcsx-rearmed/: addon.xml
